Fix missing border between the new PHP collapsible.

--- a/css/src/yst_plugin_tools.scss
+++ b/css/src/yst_plugin_tools.scss
@@ -270,6 +270,13 @@ tr.yst_row.even {
 		}
 	}
 
+	.wpseo-collapsible-container {
+		background-color: #fff;
+		border-top: 1px solid #e2e4e7;
+		border-bottom: 1px solid #e2e4e7;
+		margin-top: -1px;
+	}
+
 	.toggleable-container-trigger {
 		border: 0;
 		background: none;
